--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 .input{
 	margin-bottom:5px;
 	width:70%;
+	border: 1px solid #CCCCCC;
 }
 
 #allVideos{
@@ -27,13 +28,17 @@
 }
 
 .bigVideos{
-	text-align: center
+	text-align: center;
+	border-bottom: 1px solid #CCCCCC;
+	border-top: 1px solid #CCCCCC;
 }
 
 .commentField{
 	background-color: #ccffee;
 	border: 2px solid #00b377;
 	margin-right: 0px;
+	margin-top:10px;
+	margin-bottom:10px;
 	overflow: scroll;
 }
 
@@ -45,6 +50,18 @@
 	background-color: #ccffee;
 	color: black;
 	border: 1px solid white;
+}
+
+#remove{
+	width:20px;
+	padding:0px;
+	margin:0px;
+	height:20px;
+}
+
+#remove p{
+	font-size:10px;
+	padding:0px;
 }
 
 h3{
